--- a/cassandra/cassandra-statefulset.yaml
+++ b/cassandra/cassandra-statefulset.yaml
@@ -60,8 +60,11 @@ spec:
             value: "DC1-K8Demo"
           - name: CASSANDRA_RACK
             value: "Rack1-K8Demo"
-          - name: CASSANDRA_SEED_PROVIDER
-            value: io.k8s.cassandra.KubernetesSeedProvider
+          # Not a good approach for the moment
+          #- name: CASSANDRA_SEED_PROVIDER
+          #  value: io.k8s.cassandra.KubernetesSeedProvider
+          - name: LISTEN_ADDRESS
+            value: 127.0.0.1
           - name: POD_IP
             valueFrom:
               fieldRef:
